# LangBot_ElysianRealmAssistant

./: .gitignore  AGENTS.md  README.md  core.py  main.py  manifest.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yml
components/event_listener/: default.py  default.yaml
readme/: README_zh_Hans.md
typings/: README.md
typings/pkg/platform/: types.pyi
typings/pkg/plugin/: context.pyi  events.pyi
