[project]
name = "langbot-elysianrealmassistant"
version = "1.8.0"
authors = [
    { name = "BiFangKNT" }
]
description = "崩坏3往世乐土攻略助手"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "langbot-plugin>=0.4.5",
    "pyyaml>=6.0.2",
    "regex>=2025.9.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.390",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "T201",
    "UP",
]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = [
    "main.py",
    "core.py",
    "components",
]
exclude = [
    ".venv",
    "cache",
]
reportMissingModuleSource = "none"
